DigicielFull/force-app/main/default/objects/Branch_Location__c/fields/BranchAddress__c.field-meta.xml
<CustomField>
    <fullName>BranchAddress__c</fullName>
    <description>The physical location of an installation</description>
    <label>Branch Address</label>
    <type>Address</type>
</CustomField>