DigicielFull/force-app/main/default/objects/Branch_Location__c/fields/Field_Survey_SR__c.field-meta.xml
<CustomField>
    <fullName>Field_Survey_SR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Survey SR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Request__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Barbados Field Survey</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Branch Locations (Service Request)</relationshipLabel>
    <relationshipName>Branch_Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>