DigicielFull/force-app/main/default/objects/Branch_Location__c/fields/Geo_CoOrdinates__c.field-meta.xml
<CustomField>
    <fullName>Geo_CoOrdinates__c</fullName>
    <label>Geo CoOrdinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>