DigicielFull/force-app/main/default/objects/Branch_Location__c/fields/Installation_SR__c.field-meta.xml
<CustomField>
    <fullName>Installation_SR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation SR</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Branch Locations</relationshipLabel>
    <relationshipName>Branch_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>