DigicielFull/force-app/main/default/objects/Branch_Location__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Branch Locations</relationshipLabel>
    <relationshipName>Branch_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>