DigicielFull/force-app/main/default/objects/Branch_Location__c/fields/Parish_Region_Department__c.field-meta.xml
<CustomField>
    <fullName>Parish_Region_Department__c</fullName>
    <label>Parish / Region / Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arima</fullName>
            </value>
            <value>
                <fullName>Artibonite</fullName>
            </value>
            <value>
                <fullName>Barima - Waini</fullName>
            </value>
            <value>
                <fullName>Brokopondo</fullName>
            </value>
            <value>
                <fullName>Carriacou</fullName>
            </value>
            <value>
                <fullName>Centre</fullName>
            </value>
            <value>
                <fullName>Chaguanas</fullName>
            </value>
            <value>
                <fullName>Chiriquí</fullName>
            </value>
            <value>
                <fullName>Christ Church</fullName>
            </value>
            <value>
                <fullName>Clarendon</fullName>
            </value>
            <value>
                <fullName>Codrington</fullName>
            </value>
            <value>
                <fullName>Colón</fullName>
            </value>
            <value>
                <fullName>Commewijne</fullName>
            </value>
            <value>
                <fullName>Coronie</fullName>
            </value>
            <value>
                <fullName>Couva/Tabaquite/Talparo</fullName>
            </value>
            <value>
                <fullName>Cuyuni - Mazaruni</fullName>
            </value>
            <value>
                <fullName>Demerara Mahaica</fullName>
            </value>
            <value>
                <fullName>Diego Martin</fullName>
            </value>
            <value>
                <fullName>East Berbice - Corentyne</fullName>
            </value>
            <value>
                <fullName>Essequibo Islands - West Demerara</fullName>
            </value>
            <value>
                <fullName>Grande Anse</fullName>
            </value>
            <value>
                <fullName>Hanover</fullName>
            </value>
            <value>
                <fullName>Kingston</fullName>
            </value>
            <value>
                <fullName>Mahaica - Mahaicony</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Marowijne</fullName>
            </value>
            <value>
                <fullName>Mayaro/Rio Claro</fullName>
            </value>
            <value>
                <fullName>Nickerie</fullName>
            </value>
            <value>
                <fullName>Nippes</fullName>
            </value>
            <value>
                <fullName>Nord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>