DigicielFull/force-app/main/default/objects/Branch_Location__c/fields/Pre_Sales_Request__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Sales Request</label>
    <referenceTo>Pre_Sales_Request__c</referenceTo>
    <relationshipLabel>Branch Locations</relationshipLabel>
    <relationshipName>Branch_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>