DigicielFull/force-app/main/default/objects/Branch_Location__c/fields/Traffic__c.field-meta.xml
<CustomField>
    <fullName>Traffic__c</fullName>
    <label>Traffic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>