DigicielFull/force-app/main/default/objects/Branch_Location__c/recordTypes/Branch_Location.recordType-meta.xml
<RecordType>
    <fullName>Branch_Location</fullName>
    <active>true</active>
    <label>Branch Location</label>
</RecordType>